--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.3.0",
     "nodemon": "^1.18.4",
     "sequelize": "^4.41.0",
+    "slug": "^0.9.2",
     "sqlite3": "^4.0.3"
   }
 }
